fixed spacing erros

--- a/assets/fonts/stylesheet.css
+++ b/assets/fonts/stylesheet.css
@@ -9,40 +9,35 @@
 
 @font-face {
   font-family: "nytfranklinextrabold";
-  src: url("franklin-normal-800-webfont.woff2") format("woff2"),
-    url("franklin-normal-800-webfont.woff") format("woff");
+  src: url("franklin-normal-800-webfont.woff2") format("woff2"), url("franklin-normal-800-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "nytfranklinbold";
-  src: url("franklin-normal-700-webfont.woff2") format("woff2"),
-    url("franklin-normal-700-webfont.woff") format("woff");
+  src: url("franklin-normal-700-webfont.woff2") format("woff2"), url("franklin-normal-700-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "nytfranklinsemibold";
-  src: url("franklin-normal-600-webfont.woff2") format("woff2"),
-    url("franklin-normal-600-webfont.woff") format("woff");
+  src: url("franklin-normal-600-webfont.woff2") format("woff2"), url("franklin-normal-600-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "nytfranklinmedium";
-  src: url("assets/fonts/franklin-normal-500-webfont.woff2") format("woff2"),
-    url("assets/fonts/franklin-normal-500-webfont.woff") format("woff");
+  src: url("assets/fonts/franklin-normal-500-webfont.woff2") format("woff2"), url("assets/fonts/franklin-normal-500-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "nytfranklinlight";
-  src: url("franklin-normal-300-webfont.woff2") format("woff2"),
-    url("franklin-normal-300-webfont.woff") format("woff");
+  src: url("franklin-normal-300-webfont.woff2") format("woff2"), url("franklin-normal-300-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
